--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "angular": "^1.5.0",
     "angular-google-maps": "^2.3.2",
     "lodash": "^4.5.1",
-    "angular-route": "^1.5.0"
+    "angular-route": "^1.5.0",
+    "Materialize": "materialize#^0.97.5"
   }
 }
