--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "angular-google-maps": "^2.3.2",
     "lodash": "^4.5.1",
     "angular-route": "^1.5.0",
-    "Materialize": "materialize#^0.97.5"
+    "Materialize": "materialize#^0.97.5",
+    "jquery": "^2.2.1"
   }
 }
